apps/authentik/referencegrant-forward-auth.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: forward-auth
  namespace: authentik
spec:
  from:
    - group: gateway.envoyproxy.io
      kind: SecurityPolicy
      namespace: sonarr
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: sonarr
    - group: gateway.envoyproxy.io
      kind: SecurityPolicy
      namespace: radarr
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: radarr
    - group: gateway.envoyproxy.io
      kind: SecurityPolicy
      namespace: bazarr
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: bazarr
    - group: gateway.envoyproxy.io
      kind: SecurityPolicy
      namespace: prowlarr
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: prowlarr
    - group: gateway.envoyproxy.io
      kind: SecurityPolicy
      namespace: tubearchivist
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: tubearchivist
    - group: gateway.envoyproxy.io
      kind: SecurityPolicy
      namespace: paperless-ngx
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: paperless-ngx
  to:
    - group: ""
      kind: Service
      name: authentik-server
